[gd_scene load_steps=2 format=3 uid="uid://c46u1wrjauvcm"]

[ext_resource type="Script" uid="uid://ldvl2ql0kyny" path="res://MultiplayerController.gd" id="1_f26qn"]

[node name="host_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f26qn")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.0
offset_top = -20.0
offset_right = 86.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="IPAddress" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "localhost"
placeholder_text = "IP Address"

[node name="Port" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "8910"
placeholder_text = "Port"

[node name="Name" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Player name"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Server"

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start game"

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
offset_left = 3.0
offset_top = 3.0
offset_right = 78.0
offset_bottom = 34.0
text = "Back"

[connection signal="text_changed" from="VBoxContainer/IPAddress" to="." method="_on_ip_address_text_changed"]
[connection signal="text_changed" from="VBoxContainer/Port" to="." method="_on_port_text_changed"]
[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_button_pressed"]
